Сервис отправки электронных писем

--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -18,6 +18,10 @@
                         attr: { placeholder: 'Ваш Email...'},
                         label_attr: {class: 'sr-only'}
                     }) }}
+                    {{ form_row(registrationForm.firstName, {
+                        attr: { placeholder: 'Ваше Имя...'},
+                        label_attr: {class: 'sr-only'}
+                    }) }}
                     {{ form_row(registrationForm.plainPassword, {
                         attr: { placeholder: 'Ваш Пароль...'},
                         label_attr: {class: 'sr-only'}
