--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -51,22 +51,8 @@
 
                     </div>
 
-                    <div class="col-md-12 col-xl-4">
-                        <div class="text-center bg-primary text-white py-1 border border-bottom-0">
-                            <h4 class="mb-0">Последние комменты</h4>
-                        </div>
-                        <div class="quotes-container bg-white shadow-sm border border-top-0 pb-2 pt-2 px-5">
+                    {{ render(controller('App\\Controller\\PartialController::lastComments')) }}
 
-                            {% for comment in latestComments %}
-                                <div class="border-bottom mb-3">
-                                    <div class="h4 text-left"># {{ comment.article.title }}</div>
-                                    <p><i class="far fa-comment text-secondary"></i> {{ comment.content }}
-                                        <br> — <a href="#">Василий ПиЭйчПи, Программист Ruby</a></p>
-                                </div>
-                            {% endfor %}
-
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
